[gd_scene load_steps=5 format=3 uid="uid://2hapi0isjjdc"]

[ext_resource type="Script" uid="uid://bahyffui5sgpu" path="res://inventory/slot.gd" id="1_ga1e0"]
[ext_resource type="Texture2D" uid="uid://df287ie0cy4d6" path="res://Assets/Sprites/UI/InventorySlot.png" id="1_ugn6n"]
[ext_resource type="FontFile" uid="uid://bojmp50ujm2pp" path="res://Assets/Fonts/UIFont.ttf" id="2_pm6ta"]

[sub_resource type="FontVariation" id="FontVariation_bqy0k"]
base_font = ExtResource("2_pm6ta")
spacing_glyph = 1

[node name="Slot" type="PanelContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(16, 16)
offset_right = 16.0
offset_bottom = 16.0
script = ExtResource("1_ga1e0")

[node name="SlotTexture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("1_ugn6n")
stretch_mode = 5

[node name="ItemTexture" type="TextureRect" parent="SlotTexture"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = SubResource("FontVariation_bqy0k")
theme_override_font_sizes/font_size = 16
text = "999"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
